--- a/section-2-1-interval-arithmetic.org
+++ b/section-2-1-interval-arithmetic.org
@@ -97,56 +97,48 @@ In passing, Ben also cryptically comments: “By testing the signs of the endpoi
 (define (positive-interval? x)
   (positive? (lower-bound x)))
 
-(define (general-mul-interval x y)
-  (let ((p1 (* (lower-bound x)
-               (lower-bound y)))
-        (p2 (* (lower-bound x)
-               (upper-bound y)))
-        (p3 (* (upper-bound x)
-               (lower-bound y)))
-        (p4 (* (upper-bound x)
-               (upper-bound y))))
-    (make-interval (min p1 p2 p3 p4)
-                   (max p1 p2 p3 p4))))
-
 (define (mul-interval x y)
-  (cond ((interval-spans-zero? x)
+  (define (general-mul-interval lx ux ly uy)
+    (let ((p1 (* lx ly))
+          (p2 (* lx uy))
+          (p3 (* ux ly))
+          (p4 (* ux uy)))
+      (make-interval (min p1 p2 p3 p4)
+                     (max p1 p2 p3 p4))))
+
+  (let ((lx (lower-bound x))
+        (ux (upper-bound x))
+        (ly (lower-bound y))
+        (uy (upper-bound y)))
+    (cond ((interval-spans-zero? x)
          (cond ((interval-spans-zero? y)
-                (general-mul-interval x y))
+                (general-mul-interval lx ux ly uy))
 
                ((positive-interval? y)
-                (make-interval (* (lower-bound x) (upper-bound y))
-                               (* (upper-bound x) (upper-bound y))))
+                (make-interval (* lx uy) (* ux uy)))
 
                (else
-                (make-interval (* (upper-bound x) (lower-bound y))
-                               (* (lower-bound x) (lower-bound y))))))
+                (make-interval (* ux ly) (* lx ly)))))
 
         ((positive-interval? x)
          (cond ((interval-spans-zero? y)
-                (make-interval (* (upper-bound x) (lower-bound y))
-                               (* (upper-bound x) (upper-bound y))))
+                (make-interval (* ux ly) (* ux uy)))
 
                ((positive-interval? y)
-                (make-interval (* (lower-bound x) (lower-bound y))
-                               (* (upper-bound x) (upper-bound y))))
+                (make-interval (* lx ly) (* ux uy)))
 
                (else
-                (make-interval (* (upper-bound x) (lower-bound y))
-                               (* (lower-bound x) (upper-bound y))))))
+                (make-interval (* ux ly) (* lx uy)))))
 
         (else
          (cond ((interval-spans-zero? y)
-                (make-interval (* (lower-bound x) (upper-bound y))
-                               (* (lower-bound x) (lower-bound y))))
+                (make-interval (* lx uy) (* lx ly)))
 
                ((positive-interval? y)
-                (make-interval (* (lower-bound x) (upper-bound y))
-                               (* (upper-bound x) (lower-bound y))))
+                (make-interval (* lx uy) (* ux ly)))
 
                (else
-                (make-interval (* (upper-bound x) (upper-bound y))
-                               (* (lower-bound x) (lower-bound y))))))))
+                (make-interval (* ux uy) (* lx ly))))))))
 
 ;; validation
 ;;                      x          y      expected
