--- a/section-2-1-interval-arithmetic.org
+++ b/section-2-1-interval-arithmetic.org
@@ -175,38 +175,26 @@ In passing, Ben also cryptically comments: “By testing the signs of the endpoi
 
 #+end_src
 
-* TODO Exercise 2.12
+* Exercise 2.12
 Define a constructor make-center-percent that takes a center and a percentage tolerance and produces the desired interval.  You must also define a selector percent that produces the percentage tolerance for a given interval.  The center selector is the same as the one shown above.
+
+** Solution
+#+begin_src scheme
+(define (make-center-percent center percentage)
+  (let ((rate (/ percentage 100.0)))
+    (make-interval (* center (- 1 rate))
+                   (* center (+ 1 rate)))))
+
+(test-equal (make-interval 0.9 1.1)
+  (make-center-percent 1 10))
+
+(test-equal (make-interval 0.0 2.0)
+  (make-center-percent 1 100))
+#+end_src
 
 * TODO Exercise 2.13
 Show that under the assumption of small percentage tolerances there is a simple formula for the approximate percentage tolerance of the product of two intervals in terms of the tolerances of the factors.  You may simplify the problem by assuming that all numbers are positive.
 
-After considerable work, Alyssa P. Hacker delivers her finished system. Several years later, after she has forgotten all about it, she gets a frenzied call from an irate user, Lem E. Tweakit.  It seems that Lem has noticed that the formula for parallel resistors can be written in two algebraically equivalent ways:
-
-\[ \frac{R_1 R_2}{R_1 + R_2} \]
-
-and
-
-\[ \frac{1}{1/R_1 + 1/R_2} \]
-
-He has written the following two programs, each of which computes the parallel-resistors formula differently:
-
-#+begin_src scheme :eval never
-(define (par1 r1 r2)
-  (div-interval
-   (mul-interval r1 r2)
-   (add-interval r1 r2)))
-
-(define (par2 r1 r2)
-  (let ((one (make-interval 1 1)))
-    (div-interval
-     one
-     (add-interval
-      (div-interval one r1)
-      (div-interval one r2)))))
-#+end_src
-
-Lem complains that Alyssa’s program gives different answers for the two ways of computing. This is a serious complaint.
 
 * TODO Exercise 2.14
 Demonstrate that Lem is right. Investigate the behavior of the system on a variety of arithmetic expressions. Make some intervals $A$ and $B$, and use them in computing the expressions $A/A$ and $A/B$.  You will get the most insight by using intervals whose width is a small percentage of the center value. Examine the results of the computation in center-percent form (see Exercise 2.12).
